Adding differenciation smoother and Input Assembler fixes